--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,8 @@
     <!-- set global properties for this build -->
     <property name="src" location="src/pente:src/pente/Players"/>
     <property name="build" location="build"/>
+    <property name="config" location="config"/>
+    <property name="jar" location="${build}/jars/pente.jar"/>
 
     <target name="init">
         <!-- Create the build directory structure used by compile -->
@@ -13,7 +15,9 @@
     <target name="compile" depends="init">
         <!-- Compile the java code from ${src} into ${build} -->
         <javac srcdir="${src}" destdir="${build}/classes"/>
-        <jar destfile="${build}/jars/pente.jar" basedir="${build}/classes"/>
+        <jar destfile="${jar}" basedir="${build}/classes">
+            <fileset dir="${config}" includes="*.csv"/>
+        </jar>
     </target>
       
     <target name="clean">
@@ -25,9 +29,13 @@
         <!-- Runs the jar-->
         <java classname="pente.Pente" failonerror="true" fork="false">
             <classpath>
-                <pathelement location="${build}/jars/pente.jar"/>
+                <pathelement location="${jar}"/>
                 <pathelement path="${java.class.path}:${build}/classes/pente"/>
             </classpath>
        </java>
+    </target>
+
+    <target name="signjar" depends="compile">
+        <signjar jar="${jar}" alias="apache-group" storepass="secret"/>
     </target>
 </project>
